Bur en la carga de los datos de yahoo

--- a/history_data.ipynb
+++ b/history_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,12 @@
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "import matplotlib.pyplot as plt\n",
-    "import mplfinance as mpf\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14990,7 +14989,7 @@
     "    \n",
     "    # En la data de yahoo no viene % Var, lo calculamos y se lo añadimos al dataframe\n",
     "    for i in range(1, len(df_yahoo)):\n",
-    "        df_yahoo.loc[i, '% var'] = ((df_yahoo_san.loc[i, 'Close']*100) / df_yahoo_san.loc[i-1, 'Close'])-100\n",
+    "        df_yahoo.loc[i, '% var'] = ((df_yahoo.loc[i, 'Close']*100) / df_yahoo.loc[i-1, 'Close'])-100\n",
     "    \n",
     "    return df_yahoo"
    ]
